Fix for % sizing of object frame, bug 106602 r=serge sr=attinasi a=roc+moz